@@ -6,6 +6,11 @@ Change history for Coverage.py
 Version 3.5
 -----------
 
+- The HTML report now has hotkeys.  Try ``n``, ``s``, ``m``, ``x``, ``b``, 
+  ``p``, and ``c`` on the overview page to change the column sorting.
+  On a file page, ``r``, ``m``, ``x``, and ``p`` toggle the run, missing,
+  excluded, and partial line markings.
+
 - A little bit of Jython support: `coverage run` can now measure Jython
   execution by adapting when $py.class files are traced. Thanks, Adi Roiban.
 
